<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clInicioFormulas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".InicioFormulas">

    <Button
        android:id="@+id/btnResolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calcularFormula"
        android:text="@string/btn_calcular_text"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFormulas"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/ivFormulas"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:contentDescription="@string/cont_desc_iv_formula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spFormulas"
        app:layout_constraintVertical_bias="0.1"
        tools:srcCompat="@drawable/ecuacion_cuadratica" />

    <Spinner
        android:id="@+id/spFormulas"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:entries="@array/formulas"
        android:minHeight="48dp"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.005" />

    <!--Campos fórmula cuadrática-->
    <LinearLayout
        android:id="@+id/linearLayoutFormulaCuadA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivFormulas"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/tvFormulaCuadA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/notosans_regular"
            android:minHeight="48dp"
            android:text="@string/tv_formula_cuad_a"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etFormulaCuadA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_hint_form_cuad_a"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFormulaCuadB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutFormulaCuadA"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/tvFormulaCuadB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/notosans_regular"
            android:minHeight="48dp"
            android:text="@string/tv_formula_cuad_b"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etFormulaCuadB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_hint_form_cuad_b"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFormulaCuadC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutFormulaCuadB"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/tvFormulaCuadC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/notosans_regular"
            android:minHeight="48dp"
            android:text="@string/tv_formula_cuad_c"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etFormulaCuadC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_hint_form_cuad_c"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:autofillHints="" />

    </LinearLayout>

    <!--Campos Area del trapecio-->
    <LinearLayout
        android:id="@+id/linearLayoutAreaTrapecioBMayor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivFormulas"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/tvAreaTrapecioBMayor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/notosans_regular"
            android:minHeight="48dp"
            android:text="@string/tv_area_trapecio_B"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etAreaTrapecioBMayor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_hint_area_trapecio_B"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutAreaTrapecioBMenor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAreaTrapecioBMayor"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/tvAreaTrapecioBMenor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/notosans_regular"
            android:minHeight="48dp"
            android:text="@string/tv_area_trapecio_b"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etAreaTrapecioBMenor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_hint_area_trapecio_b"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutAreaTrapecioH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAreaTrapecioBMenor"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/tvAreaTrapecioH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/notosans_regular"
            android:minHeight="48dp"
            android:text="@string/tv_area_trapecio_h"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etAreaTrapecioH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_hint_area_trapecio_h"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:autofillHints="" />
    </LinearLayout>

    <!--Campos Distancia entre dos puntos-->
    <LinearLayout
        android:id="@+id/linearLayoutDistX1Y1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivFormulas"
        app:layout_constraintVertical_bias="0.1">

        <LinearLayout
            android:id="@+id/linearLayoutDistX1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.1">

            <TextView
                android:id="@+id/tvDistX1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:minHeight="48dp"
                android:text="@string/tv_dist_dos_puntos_x1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/etDistX1"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:visibility="visible"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDistY1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.1">

            <TextView
                android:id="@+id/tvDistY1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:minHeight="48dp"
                android:text="@string/tv_dist_dos_puntos_y1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/etDistY1"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:visibility="visible"
                android:autofillHints="" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDistX2Y2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutDistX1Y1"
        app:layout_constraintVertical_bias="0.1">

        <LinearLayout
            android:id="@+id/linearLayoutDistX2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.1">

            <TextView
                android:id="@+id/tvDistX2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:minHeight="48dp"
                android:text="@string/tv_dist_dos_puntos_x2"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/etDistX2"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:visibility="visible"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDistY2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.1">

            <TextView
                android:id="@+id/tvDistY2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notosans_regular"
                android:minHeight="48dp"
                android:text="@string/tv_dist_dos_puntos_y2"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/etDistY2"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:visibility="visible"
                android:autofillHints="" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/iv_content_desc_prof"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/profesor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_regular"
        android:text="@string/tv_select_formula"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2125" />

</androidx.constraintlayout.widget.ConstraintLayout>